--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.size0{
+  width: 200px;
+  height: 200px;
+}
+.size1{
+  width: 300px;
+  height: 200px;
+}
+.size2{
+  width: 400px;
+  height: 200px;
+}
+.size3{
+  width: 500px;
+  height: 200px;
+}
+.size4{
+  width: 600px;
+  height: 200px;
+}
