--- a/src/App.css
+++ b/src/App.css
@@ -38,26 +38,31 @@
 }
 
 .size0{
-  width: 100px;
-  height: 200px;
+  width: 150px;
+  height:250px;
 }
 .size1{
-  width: 150px;
-  height: 200px;
+  width: 175px;
+  height: 250px;
 }
 .size2{
   width: 200px;
-  height: 200px;
+  height: 250px;
 }
 .size3{
-  width: 250px;
-  height: 200px;
+  width: 225px;
+  height: 250px;
 }
 .size4{
-  width: 300px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
 }
 .size5{
-  width: 350px;
-  height: 200px;
+  width: 275px;
+  height: 250px;
 }
+.size6{
+  width: 300px;
+  height: 250px;
+}
+
