mercyがやりました

--- a/src/App.css
+++ b/src/App.css
@@ -65,4 +65,16 @@
   width: 300px;
   height: 250px;
 }
+.size7{
+  width: 325px;
+  height: 250px;
+}
+.size8{
+  width: 350px;
+  height: 250px;
+}
+.size9{
+  width: 375px;
+  height: 250px;
+}
 
