--- a/src/style/Data.css
+++ b/src/style/Data.css
@@ -6,3 +6,11 @@
 ul{
     list-style: none;
 }
+
+.box {
+    width: 100%;                
+    height: 130px;               
+    border: 1px solid #000;      
+    overflow-y: scroll;
+    display: flex;         
+  }
