--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,8 +1,33 @@
-h3{
-    color: blue;
+.component_header{
+    /* Rectangle 1 */
+
+position: flex;
+width: 100%;
+height: 8em;
+left: 0px;
+top: 0px;
+
+background: #8AC6D1;
+box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+
 }
 
-.component_header{
-    background-color: rgb(190, 236, 9);
-    padding: 16px 0px;
+.component_header > h3{
+    position: static;
+    /* width: 350px;
+    height: 50px;
+    left: 50px;
+    top: 15px; */
+    margin: auto;
+    
+    font-family: '851MkPOP';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 80px;
+    
+    color: #FFB6B9;
+    
+    border: 1.5px solid #E6E8FF;
+    text-shadow: 0px 15px 15px rgba(0, 0, 0, 0.25);
 }
