--- a/src/style/Display.css
+++ b/src/style/Display.css
@@ -1,12 +1,11 @@
 .component_display{
     width: 50%;
-    height: 100%;
+    height: 100vh;
     margin: 2rem;
     padding: 1rem;
     background-color: #FFFEF0;
     box-shadow: 0rem 1px 8px 3px inset #bbaaa3;
     border-radius: 1rem;
-
 }
 
 .img_display{
