--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -31,3 +31,46 @@ box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     border: 1.5px solid #E6E8FF;
     text-shadow: 0px 15px 15px rgba(0, 0, 0, 0.25);
 }
+
+.size0{
+    width: 150px;
+    height:250px;
+  }
+  .size1{
+    width: 175px;
+    height: 250px;
+  }
+  .size2{
+    width: 200px;
+    height: 250px;
+  }
+  .size3{
+    width: 225px;
+    height: 250px;
+  }
+  .size4{
+    width: 250px;
+    height: 250px;
+  }
+  .size5{
+    width: 275px;
+    height: 250px;
+  }
+  .size6{
+    width: 300px;
+    height: 250px;
+  }
+  .size7{
+    width: 325px;
+    height: 250px;
+  }
+  .size8{
+    width: 350px;
+    height: 250px;
+  }
+  .size9{
+    width: 375px;
+    height: 250px;
+  }
+  
+  
