--- a/src/style/Data.css
+++ b/src/style/Data.css
@@ -11,12 +11,20 @@
  
 ul{
     list-style: none;
+    padding: 0px;
 }
 
 .box {
+    margin: 0px auto;
     width: 100%;                
     height: 130px;               
     border: 1px solid #000;      
     overflow-y: scroll;
-    display: flex;         
+    /* display: flex;          */
+  }
+
+  .food_list{
+    margin: 0px auto;
+    display: flex;
+    width: max-content;
   }
