--- a/src/style/Data.css
+++ b/src/style/Data.css
@@ -1,5 +1,6 @@
 .component_data{
     width: 50%;
+    height: auto;
     background-color: #FFFEF0;
     border-radius: 1rem;
     margin: 2rem;
@@ -17,7 +18,7 @@ ul{
 .box {
     margin: 0px auto;
     width: 100%;                
-    height: 130px;               
+    height: 240px;               
     border: 1px solid #000;      
     overflow-y: scroll;
     /* display: flex;          */
