--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,12 +3,23 @@
 }
 .App {
   text-align: center;
-  height:100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+@media screen and (min-width: 767px) {
+  .App{
+      height: 100vh;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .App{
+      width: 100%;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
