--- a/src/style/Display.css
+++ b/src/style/Display.css
@@ -1,6 +1,5 @@
 .component_display{
     width: 50%;
-    height: 100vh;
     margin: 2rem;
     padding: 1rem;
     background-color: #FFFEF0;
@@ -13,4 +12,24 @@
     margin:auto;
     /* height: 100%; */
     /* background-color: blueviolet; */
+}
+
+@media screen and (min-width: 767px) {
+    .component_display{
+        height: 100vh;
+        margin-right: 1rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .component_display{
+        margin: 1rem;
+        width: auto;
+        /* height: 100vh;
+        margin: 2rem;
+        padding: 1rem;
+        background-color: #FFFEF0;
+        box-shadow: 0rem 1px 8px 3px inset #bbaaa3;
+        border-radius: 1rem; */
+    }
 }
