--- a/src/style/Display.css
+++ b/src/style/Display.css
@@ -12,3 +12,9 @@
     text-align: center;
     margin:auto;
 }
+
+@media screen and (min-width: 767px) {
+    .component_display{
+        margin-right: 1rem;
+    }
+}
