--- a/src/style/Data.css
+++ b/src/style/Data.css
@@ -1,5 +1,5 @@
 .component_data{
-    width: 50%;
+    /* width: 50%; */
     height: auto;
     background-color: #FFFEF0;
     border-radius: 1rem;
@@ -31,6 +31,13 @@ ul{
 
 @media screen and (min-width: 767px) {
     .component_data{
+        width: 50%;
         margin-left: 1rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .component_data{
+        margin: 1rem;
     }
 }
