--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -23,7 +23,8 @@ box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     font-family: '851MkPOP';
     font-style: normal;
     font-weight: 400;
-    font-size: 80px;
+    /* font-size: 80px; */
+    font-size: 60px;
     line-height: 80px;
     
     color: #FFB6B9;
