--- a/src/style/Display.css
+++ b/src/style/Display.css
@@ -24,5 +24,7 @@
     .component_display{
         display: flex;
         margin: 1rem;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
     }
 }
