--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -22,6 +22,7 @@
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
+    z-index: 10;
   }
   @-webkit-keyframes load4 {
     0%,
